--- a/app/components/hero.module.css
+++ b/app/components/hero.module.css
@@ -1,3 +1,4 @@
+/*container da logo*/
 .hero{
     background-color: red;
     padding: 20%;
@@ -7,19 +8,21 @@
     align-items: center;
 }
 
-
+/* posição da logo */
 .center_logo{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width:100%;
+    height: 10vh;
 }
 
+/* ajustes na logo */
 .logo{
-    width: 35%;
-    max-width: 280px;
+   
+    max-width: 750px;
     height: auto;
-    opacity: 0.95;
+    
 }
 
 
