--- a/app/components/section/agendamento.module.css
+++ b/app/components/section/agendamento.module.css
@@ -1,5 +1,17 @@
 .agendamento{
 
-    background-color: green;
+   
+    
     padding: 20%;
+    padding-bottom: 10%;
+    
+    display: flex;
+    flex-direction: column; /* 🔑 */
+    align-items: center;     /* centraliza horizontal */
+    justify-content: center; /* controla o eixo vertical */
+
+
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
 }
