--- a/app/components/hero.module.css
+++ b/app/components/hero.module.css
@@ -5,9 +5,9 @@
     padding-bottom: 10%;
     
     display: flex;
-    flex-direction: column; /* 🔑 */
-    align-items: center;     /* centraliza horizontal */
-    justify-content: center; /* controla o eixo vertical */
+    flex-direction: column; 
+    align-items: center;     
+    justify-content: center; 
 
 
     background-size: cover; 
