--- a/app/components/section/about.module.css
+++ b/app/components/section/about.module.css
@@ -1,5 +1,19 @@
 .about {
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+}
 
-    background-color: blue;
-    padding: 20%;
+
+.imageWrapper {
+  display: flex;
+  justify-content: flex-start;
+}
+
+
+.textContent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end; 
+  text-align: right;
 }
