--- a/app/components/section/service.module.css
+++ b/app/components/section/service.module.css
@@ -1,4 +1,7 @@
 .service{
-    background-color: yellow;
-    padding: 20%;
+    
+    padding-top: 10%;
+    display: flex;
+    justify-content: center;
+    gap: 3%;
 }
