--- a/app/components/hero.module.css
+++ b/app/components/hero.module.css
@@ -1,8 +1,12 @@
 /*container hero*/
 .hero{
-    background-image: url('@/app/assets/hero-barbershop.jpg');
-    padding: 20%;
-    padding-bottom: 10%;
+    position: relative;
+    inset: 0;
+
+    min-height: 90vh;
+
+    background-image: url(@/app/assets/back.png);
+    
     
     display: flex;
     flex-direction: column; 
@@ -13,7 +17,19 @@
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
+    
+    
 }
+
+.bg_overlay {
+  position: absolute;
+  inset: 0;
+  backdrop-filter: blur(4px);
+  background: rgba(0, 0, 0, 0.5);
+  z-index:1;
+}
+
+
 
 /* posição da logo */
 .center_logo{
@@ -26,8 +42,11 @@
 
 /* ajustes na logo */
 .logo{
-   
-    max-width: 750px;
+    
+    
+    position: relative;
+    z-index: 2;
+    max-width: 850px;
     height: auto;
     
 }
