--- a/app/components/section/local.module.css
+++ b/app/components/section/local.module.css
@@ -1,5 +1,5 @@
 .local{
-
+  background: hsl(160, 10%, 97%);
   display: flex;
   padding: 5%;
   padding-left: 5%; 
@@ -20,3 +20,9 @@
 .map{
   width: 50%;
 }
+
+.infoimage{
+
+  height: 10vh;
+}
+  
