--- a/app/components/section/service.module.css
+++ b/app/components/section/service.module.css
@@ -1,6 +1,18 @@
+.service_body
+{
+    background: hsl(160, 10%, 97%);
+    padding-bottom: 10%;
+    padding-top: 5% ;
+}
 .service{
     
-    padding-top: 10%;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    
+}
+.colum1{
+    padding-top: 3% ;
     display: flex;
     justify-content: center;
     gap: 3%;
